# databricks-tui

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: app.rs  cli.rs  lib.rs  main.rs  shape.rs  ui.rs
src/fetchers/: catalog.rs  clusters.rs  current_user.rs  dashboards.rs  detail.rs  jobs.rs  mod.rs  pipelines.rs  warehouses.rs
tests/: shape_test.rs
